--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -2,10 +2,6 @@
   display: none !important;
 }
 
-/* TEMPORARILY HIDE ELEMENTS THAT DON'T LINK TO ANYWHERE YET */
-.main-menu-item.list-users,
-.user-menu.unstyled-list li.sub-menu-item:last-child { display: none; }
-
 /* =Base Styles
 -------------------------------------------------------------- */
 
@@ -191,6 +187,17 @@ textarea:focus {
 textarea {
   height: 6.5em;
   resize: none;
+}
+
+/* Avatars */
+a.user-link {
+  float: left;
+  margin-right: 10px;
+}
+.avatar {
+  display: block;
+  width: 50px;
+  height: 50px;
 }
 
 
@@ -453,8 +460,7 @@ ul.user-menu:after {
   font-weight: 700;
   color: #808073;
 }
-a.user-link {
-  float: left;
+.vision a.user-link {
   background-color: #48a5bf;
   border: 2px solid #7ec4d8;
   border-left: 0;
@@ -463,8 +469,7 @@ a.user-link {
   margin-left: -50px;
   margin-bottom: 75px;
 }
-.avatar {
-  display: block;
+.vision .avatar {
   width: 40px;
   height: 40px;
   border-radius: 0 18px 18px 0;
@@ -573,7 +578,7 @@ a.user-link {
 }
 .replies-region .avatar {
   float: left;
-  border-radius: 0;
+  border-radius: 5px;
   margin-left: -50px;
 }
 .replies-region .datetime {
@@ -904,9 +909,11 @@ a.welcome-close-btn {
   display: inline;
 }
 
+
 /* =User Lists
 -------------------------------------------------------------- */
 
+/* Grid */
 ul.user-list {
   clear: both;
   margin-bottom: 10px;
@@ -924,6 +931,56 @@ ul.user-list {
   width: 100%;
   height: auto;
 }
+
+/* Stacked */
+.user-card {
+  clear: both;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #d5d5c6;
+  box-shadow: 0 1px 0 rgba(255,255,255,0.75);
+}
+.user-card .author {
+  display: block;
+  padding: 5px 0;
+}
+.user-card .author-name {
+  display: block;
+}
+
+/* Tabs */
+.tabs-container {
+  margin: 0 -10px 10px -10px;
+  position: relative;
+  top: -20px;
+}
+.tabs {
+  float: left;
+  width: 100%;
+}
+.tab {
+  float: left;
+  width: 50%;
+}
+.tab a {
+  display: block;
+  padding: 10px 10px 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: medium;
+  font-weight: 800;
+  text-transform: uppercase;
+  background-color: #d5d5c6;
+  box-shadow: inset 0 0 8px #808073;
+}
+.tab.is-current a {
+  background-color: #e7e7d7;
+  box-shadow: none;
+}
+.tabs-2 tab {
+  
+}
+
 
 /* =Media Queries for Responsive Layout
 -------------------------------------------------------------- */
