Add image url to the twitter card

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -29,6 +29,7 @@
   <meta name="twitter:site" content="@vizlou">
   <meta name="twitter:creator" content="@{{ vision.author.username }}">
   <meta name="twitter:title" content="#VizLou | My vision for Louisville">
+  <meta name="twitter:image:src" content="{{ vision.media_url }}">
   <meta name="twitter:description" content="{{ vision.text }}">
 
   <!-- Facebook -->
