--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -77,6 +77,7 @@ hr {
   margin-left: -10px;
 }
 .capitalize { text-transform:capitalize; }
+.meta-sep { opacity: 0.25; margin-right: 0.25em; margin-left: 0.25em; }
 
 /* Images */
 img {
@@ -936,20 +937,16 @@ ul.user-list {
 .user-card {
   clear: both;
   margin-bottom: 10px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #d5d5c6;
-  box-shadow: 0 1px 0 rgba(255,255,255,0.75);
-}
-li:last-child .user-card {
-  border-bottom: 0;
-  box-shadow: none;
+  padding: 10px;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 .user-card .author {
   display: block;
-  padding: 5px 0;
+  padding: 5px 0 0;
 }
-.user-card .author-name {
-  display: block;
+.user-meta {
+  font-weight: 600;
 }
 
 /* Tabs */
