Hook up all of the user avatars as links to the user detail page - Close the user menu on route

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -922,8 +922,7 @@ ul.user-list {
 .user-list li {
   display: inline;
 }
-.user-list li a,
-.user-list li .pretend-a {
+.user-list li a {
   float: left;
   width: 10%;
 }
@@ -979,7 +978,7 @@ ul.user-list {
   box-shadow: none;
 }
 .tabs-2 tab {
-  
+
 }
 
 
