--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -119,7 +119,15 @@
   <script src="{{ STATIC_URL }}components/moment/moment.js"></script>
   <script src="{{ STATIC_URL }}components/swiper/dist/idangerous.swiper-2.0.js"></script>
   <script src="{{ STATIC_URL }}components/Countable/Countable.js"></script>
+
+  <!-- Image processing tools -->
+  <script src="{{ STATIC_URL }}components/exif-js/binaryajax.js"></script>
+  <script src="{{ STATIC_URL }}components/exif-js/exif.js"></script>
+  <script src="{{ STATIC_URL }}components/blueimp-load-image/js/load-image.js"></script>
+  <script src="{{ STATIC_URL }}components/blueimp-canvas-to-blob/js/canvas-to-blob.js"></script>
+  
   {% handlebarsjs '(.*)' precompile register_partials %}
+  
   <script src="{{ STATIC_URL }}js/django-csrf.js"></script>
   <script src="{{ STATIC_URL }}js/config.js"></script>
   <script src="{{ STATIC_URL }}js/utils.js"></script>
