--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -503,20 +503,22 @@ a.user-link {
   position: relative;
   font-weight: 800;
   background: #48a5bf;
+  color: #fff;
   box-shadow: inset 0 20px 20px #7ec4d8;
-  text-shadow: 0 1px 1px rgba(255,255,255,0.5);
-  padding: 0 10px 0 30px;
+  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+  padding: 0 11px 0 28px;
   line-height: 2.5em;
 }
 .reply-link {
   border-left: 1px solid #48a5bf;
+  padding-left: 25px;
 }
 .tweet-icon {
   display: block;
   width: 20px;
   height: 15px;
   position: absolute;
-  left: 8px;
+  left: 5px;
   top: 50%;
   overflow: hidden;
   margin-top: -7px;
@@ -529,6 +531,7 @@ a.user-link {
 .retweet-link.retweeted,
 .reply-link:hover {
   color: #468020;
+  text-shadow: 0 1px 1px rgba(255,255,255,0.5);
 }
 .retweet-link:hover img,
 .retweet-link.retweeted img,
