--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -451,6 +451,7 @@ ul.user-menu:after {
   box-shadow: inset 0 -5px 10px rgba(0,0,0,0.25);
   background-position: center center;
   background-size: 100% auto;
+  -webkit-background-size: 100% auto;
 }
 .vision-media-container.is-collapsed {
   height: 50px;
