--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -453,8 +453,18 @@ ul.user-menu:after {
   background-size: 100% auto;
   -webkit-background-size: 100% auto;
 }
+.vision .vision-media-container {
+  margin: 10px -5px 10px -45px;
+  top: 0;
+  background-color: transparent;
+  box-shadow: none;
+}
+.vision .vision-media-container img {
+  box-shadow: 0 3px 5px rgba(0,0,0,0.5), 0 -1px 0 #fff;
+  border-radius: 2px;
+}
 .vision-media-container.is-collapsed {
-  height: 50px;
+  height: 60px;
 }
 .vision-media-container.is-collapsed img {
   display: none;
