--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -79,13 +79,14 @@ hr {
 .capitalize { text-transform:capitalize; }
 .meta-sep { opacity: 0.25; margin-right: 0.25em; margin-left: 0.25em; }
 
+a, button {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 /* Images */
 img {
   max-width: 100%;
   height: auto;
-}
-a img {
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .icon-inline {
   height: 1.5em;
