--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -145,9 +145,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42333855-1', {
-    name: 'vizlou.org'
-  });
+  ga('create', '{{ settings.GOOGLE_ANALYTICS_ID|safe }}', '{{ settings.GOOGLE_ANALYTICS_DOMAIN|safe }}');
   ga('send', 'event', 'browser', 'arrived');
   </script>
 
