keep overflowing vision text from breaking layout, causing horz scroll

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -518,6 +518,8 @@ ul.user-menu:after {
   display: block;
   font-size: medium;
   font-weight: 700;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* Vision Footer */
