fix text area hiding in form

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -514,7 +514,7 @@ ul.user-menu:after {
   height: 40px;
   border-radius: 0 18px 18px 0;
 }
-.vision-description {
+.vision .vision-description {
   display: block;
   font-size: medium;
   font-weight: 700;
