--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -61,9 +61,9 @@
 
   <script src="{{ STATIC_URL }}components/modernizr/modernizr.js"></script>
   {% else %}
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/components.min.css" type="text/css" media="screen, projection" />
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/components.min.css?_=1" type="text/css" media="screen, projection" />
   <link rel="stylesheet" href="{{ STATIC_URL }}css/swiper.min.css" type="text/css" media="screen, projection" />
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/styles.min.css" type="text/css" media="screen, projection" />
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/styles.min.css?_=1" type="text/css" media="screen, projection" />
   <script src="{{ STATIC_URL }}js/modernizr.min.js"></script>
   {% endif %}
 
@@ -136,7 +136,7 @@
   <script src="{{ STATIC_URL }}js/views.js"></script>
   <script src="{{ STATIC_URL }}js/app.js"></script>
   {% else %}
-  <script src="{{ STATIC_URL }}js/components.min.js"></script>
+  <script src="{{ STATIC_URL }}js/components.min.js?_=1"></script>
   {% handlebarsjs '(.*)' precompile register_partials %}
 
   <script>
@@ -148,7 +148,7 @@
   ga('create', '{{ settings.GOOGLE_ANALYTICS_ID|safe }}', '{{ settings.GOOGLE_ANALYTICS_DOMAIN|safe }}');
   </script>
 
-  <script src="{{ STATIC_URL }}js/app.min.js"></script>
+  <script src="{{ STATIC_URL }}js/app.min.js?_=1"></script>
   {% endif %}
 </body>
 </html>
