--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -615,6 +615,8 @@ ul.user-menu:after {
 }
 .replies-region .avatar {
   float: left;
+  width: 40px;
+  height: 40px;
   border-radius: 5px;
   margin-left: -50px;
 }
