--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -99,6 +99,7 @@
   </div><!-- end .site-header -->
 
   <div class="main">
+    <div class="spinner-target"></div>
   </div><!-- end .main -->
 
   <script>
@@ -119,6 +120,7 @@
   <script src="{{ STATIC_URL }}components/moment/moment.js"></script>
   <script src="{{ STATIC_URL }}components/swiper/dist/idangerous.swiper-2.0.js"></script>
   <script src="{{ STATIC_URL }}components/Countable/Countable.js"></script>
+  <script src="{{ STATIC_URL }}components/spin.js/spin.js"></script>
 
   <!-- Image processing tools -->
   <script src="{{ STATIC_URL }}components/exif-js/binaryajax.js"></script>
