--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -72,7 +72,7 @@
 
   <div class="site-header">
     <div class="container clearfix">
-      <h1 class="site-title"><a href="/" title="VizLou.org" rel="home"><img src="{{ STATIC_URL }}images/vizlou-logo.png" class="logo"><span class="is-hidden">VizLou.org</span></a><small class="beta">BETA</small></h1>
+      <h1 class="site-title"><a href="/" title="VizLou.org" rel="home" class="nobreak">Newark 2.0</a></h1>
       <nav class="main-menu">
         <ul class="unstyled-list">
 
