--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -881,11 +881,10 @@ h6.category-prompt {
 .welcome {
   margin-top: -20px;
   margin-bottom: 15px;
-  padding: 15px 10px 1px 10px;
+  padding: 15px 10px 0 10px;
   background: #444;
   color: #fff;
   text-shadow: 0 1px 1px rgba(0,0,0,0.5);
-  box-shadow: 0 1px 0 rgba(255,255,255,0.75), inset 0 -3px 3px rgba(0,0,0,0.1);
 }
 .welcome a {
   color: #7ec4d8;
