Create a database model for categories (MIGRATION) - Add the Category model and serializer - Add model to the admin interface - Remove old category config file and references in the template and gruntfile - Set the categories from the DB in the template on the NS object and update the helpers that use it - Add migration - Update Vision model to have a foreign key relationship with the Category model

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -108,6 +108,7 @@
     {{NS}}.staticURL = '{{ STATIC_URL|safe }}';
     {{NS}}.loginURL = '{% url "socialauth_begin" backend="twitter" %}';
     {{NS}}.twitterConf = {{ twitter_config|safe }};
+    {{NS}}.categories = {{ categories|safe }};
   </script>
 
   {% if debug %}
@@ -131,7 +132,6 @@
   {% handlebarsjs '(.*)' precompile register_partials %}
 
   <script src="{{ STATIC_URL }}js/django-csrf.js"></script>
-  <script src="{{ STATIC_URL }}js/config.js"></script>
   <script src="{{ STATIC_URL }}js/utils.js"></script>
   <script src="{{ STATIC_URL }}js/handlebars-helpers.js"></script>
   <script src="{{ STATIC_URL }}js/models.js"></script>
