--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -888,6 +888,9 @@ h6.category-prompt {
   color: #fff;
   text-shadow: 0 1px 1px rgba(0,0,0,0.5);
 }
+.welcome h1, .welcome h2, .welcome h3, .welcome h4, .welcome h5, .welcome h6 {
+  text-shadow: 0 1px 1px rgba(0,0,0,.5);
+}
 .welcome a {
   color: #7ec4d8;
 }
