--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -269,8 +269,9 @@ body {
 .welcome.site-footer {
   margin-top: 30px;
   margin-bottom: -20px;
+  padding-bottom: 20px;
   box-shadow: none;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0;
   font-size: medium;
   box-shadow: inset 0 3px 3px rgba(0,0,0,0.25);
 }
