Replace the visions url name with a config value and handlebars helper.

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -129,6 +129,7 @@
 
   {% handlebarsjs '(.*)' precompile register_partials %}
 
+  <script src="{{ STATIC_URL }}js/config.js"></script>
   <script src="{{ STATIC_URL }}js/django-csrf.js"></script>
   <script src="{{ STATIC_URL }}js/utils.js"></script>
   <script src="{{ STATIC_URL }}js/handlebars-helpers.js"></script>
