Update the vizlou.org url in the header.

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -74,7 +74,7 @@
 
   <div class="site-header">
     <div class="container clearfix">
-      <h1 class="site-title"><a href="/" title="VizLou.org" rel="home" class="nobreak">NewarkNext</a></h1>
+      <h1 class="site-title"><a href="/" title="NewarkNext.org" rel="home" class="nobreak">#NewarkNext</a></h1>
       <nav class="main-menu">
         <ul class="unstyled-list">
 
