--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -294,10 +294,10 @@ body {
   margin: 0;
 }
 .site-title {
-  font-size: 1.5em;
+  font-size: 1.25em;
   line-height: 40px;
   height: 40px;
-  margin: 0;
+  margin: 0 -20em 0 0;
   float: left;
   overflow: hidden;
   text-shadow: 0 1px 1px rgba(231,231,215,0.5);
