add media-query shiv, fix gap above .welcome when authd

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -917,8 +917,8 @@ h6.category-prompt {
 }
 
 .welcome {
-  margin-top: -20px;
-  margin-bottom: 15px;
+  position: relative;
+  top: -20px;
   padding: 0 10px;
   background: #444;
   color: #fff;
