add browsehappy message for <IE9, fix .authentication-link-login layout bug in IE

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -342,6 +342,7 @@ a.authentication-link-login {
   color: #e7e7d7;
   font-weight: bold;
   text-shadow: 0 -1px 0 #268099;
+  white-space: nowrap;
 }
 .twitter-icon {
   height: 22px;
