--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -101,6 +101,14 @@
     </div>
   </div><!-- end .site-header -->
 
+  <!--[if lt IE 9]>
+  <div class="main">
+    <div class="container">
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    </div>
+  </div>
+  <![endif]-->
+
   <div class="main">
     <div class="spinner-target"></div>
   </div><!-- end .main -->
