remove bottom margin on .vision-list a.user-link, causing images to break layout

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -500,6 +500,9 @@ ul.user-menu:after {
   margin-left: -50px;
   margin-bottom: 75px;
 }
+.vision-list a.user-link {
+  margin-bottom: 0;
+}
 .vision .avatar {
   width: 40px;
   height: 40px;
